correction de probleme de trad et corrrection dark mode

--- a/View/assets/css/shared/dark-mode.css
+++ b/View/assets/css/shared/dark-mode.css
@@ -717,6 +717,10 @@ html.dark-mode body {
   color: var(--text-secondary);
 }
 
+.dark-mode .selected-info.active {
+  background-color: var(--bg-card);
+}
+
 .dark-mode .duration-btn {
   background: var(--bg-tertiary);
   border-color: var(--border-color);
